# iot-cloud-ota

./: .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci_dev.yml
backend/iot-cloud-ota/: build.gradle  settings.gradle
device_simulator/: README.md  advertisement_manager.py  constants.py  firmware_manager.py  http_client.py  kill_simulators.sh  main.py  metrics_collector.py  mqtt_client.py  run_simulators.sh
embedded/: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  partitions.csv  sdkconfig  sdkconfig.old
embedded/docs/: 1-hardware_research.md  2-hmi.md  3-implementation_plan.md  4-technical_references.md  5-ESP-IDF_configuration.md
embedded/main/: CMakeLists.txt  config.cpp  config.hpp  lcd_conf.h  main.cpp
embedded/main/include/coffee/: cert.hpp  config.hpp  debug_task.hpp  event_control.hpp  ipc.hpp  json_task.hpp  mqtt_pub.hpp  mqtt_task.hpp  network_task.hpp  ota_task.hpp  rtc.hpp  ui_task.hpp
embedded/main/src/: cert.cpp  config.cpp  debug_task.cpp  event_control.cpp  ipc.cpp  json_task.cpp  main.cpp  mqtt_pub.cpp  mqtt_task.cpp  network_task.cpp  ota_task.cpp  rtc.cpp  ui_task.cpp
embedded/main/task/: gui_task.cpp  gui_task.hpp  task.hpp
embedded/main/ui/: ui.c  ui.h  ui_comp_hook.c  ui_configScreen.c  ui_configScreen.h  ui_debugScreen.c  ui_debugScreen.h  ui_dropDoneScreen.c  ui_dropDoneScreen.h  ui_dropScreen.c  ui_dropScreen.h  ui_events.cpp  ui_events.h  ui_firmwareScreen.c  ui_firmwareScreen.h  ui_flavorScreen.c  ui_flavorScreen.h  ui_helpers.c  ui_helpers.h  ui_mainScreen.c  ui_mainScreen.h  ui_serverScreen.c  ui_serverScreen.h  ui_wifiScreen.c  ui_wifiScreen.h
embedded/res/: network_config.json
emqx/: Dockerfile
frontend/: .env  .env.example  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  (+1 more)
grafana/: Dockerfile
mqtt-handler/: .gitignore  Dockerfile  README.md  go.mod  go.sum
private_ca/: .gitignore  README.md  ca.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  accounts.tf  backend.tf  buckets.tf  cache.tf  ecr.tf  ecs.tf  emqx.tf  firmware-upload-lambda.tf  firmware.tf  grafana.tf  mqtt_handler.tf  nat_instance.tf  presigner-lambda.tf  private_ca.tf  providers.tf  quest_db.tf  rds.tf  remote-state.tf  security_groups.tf  ssm.tf  test-ec2.tf  variables.tf  vpc.tf
(+328 files in other folders)
